doc/v2.0/_sources/reference/generated/ak.argcombinations.rst.txt
ak.argcombinations
------------------

.. py:module: ak.argcombinations

Defined in `awkward.operations.ak_argcombinations <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_argcombinations.py>`__ on `line 9 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_argcombinations.py#L9>`__.

.. py:function:: ak.argcombinations(array, n, *, replacement=False, axis=1, fields=None, parameters=None, with_name=None, highlevel=True, behavior=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param n: The number of items to choose from each list: ``2`` chooses
          unique pairs, ``3`` chooses unique triples, etc.
    :type n: int
    :param replacement: If True, combinations that include the same
                    item more than once are allowed; otherwise each item in a
                    combinations is strictly unique.
    :type replacement: bool
    :param axis: The dimension at which this operation is applied. The
             outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
    :type axis: int
    :param fields: If None, the pairs/triples/etc. are
               tuples with unnamed fields; otherwise, these ``fields`` name the
               fields. The number of ``fields`` must be equal to ``n``.
    :type fields: None or list of str
    :param parameters: Parameters for the new
                   :py:obj:`ak.contents.RecordArray` node that is created by this operation.
    :type parameters: None or dict
    :param with_name: Assigns a ``"__record__"`` name to the new
                  :py:obj:`ak.contents.RecordArray` node that is created by this operation
                  (overriding ``parameters``, if necessary).
    :type with_name: None or str
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict

Computes a Cartesian product (i.e. cross product) of ``array`` with itself
that is restricted to combinations sampled without replacement,
like :py:obj:`ak.combinations`, but returning integer indexes for
:py:obj:`ak.Array.__getitem__`.

The motivation and uses of this function are similar to those of
:py:obj:`ak.argcartesian`. See :py:obj:`ak.combinations` and :py:obj:`ak.argcartesian` for a more
complete description.

